# insta_django

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  insomnia_collection.json  pyproject.toml  requirements.txt  schema.yml
insta_django/: asgi.py  exceptions.py  permissions.py  settings.py  urls.py  wsgi.py
post_medias/: apps.py  models.py  serializers.py
post_medias/migrations/: 0001_initial.py  0002_alter_postmedia_media.py  0003_alter_postmedia_mimetype.py  0004_alter_postmedia_media.py  0005_alter_postmedia_media_alter_postmedia_thumbnail.py
posts/: filters.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/test/: test_post_views.py
tags/: models.py  serializers.py  urls.py  views.py
tags/migrations/: 0001_initial.py  0002_alter_tag_name.py
tags/test/: test_tag_views.py
users/: models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_date_joined_and_more.py  0003_user_is_superuser.py
users/test/: test_user_views.py
utils/: file_management.py
