[tool.poetry]
name = "insta-django"
version = "0.1.0"
description = ""
authors = ["Victor Ramon <91630027+2victor2@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "insta_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
